# peg_in_hole_project

./: README.md
peg_filter/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
peg_filter/include/peg_features/: mode_feature.h  peg_features.h
peg_filter/include/peg_filter/: likelihood.h  pf_manager.h  pf_manager.h~  plug_service.h
peg_filter/include/peg_filter/belief_features/: base_bel_compress.h  (+2 more)
peg_filter/include/peg_sensor/: plug_sensor.h
peg_filter/include/peg_world_wrapper/: plug_world_wrapper.h
peg_filter/launch/: peg_particle_filter.launch  plug_particle_filter.launch
peg_filter/src/: peg_filter_node.cpp
peg_filter/src/belief_features/: belief_features.cpp  mode_feature.cpp
peg_filter/src/peg_features/: mode_feature.cpp  peg_features.cpp
peg_filter/src/peg_filter/: likelihood.cpp  motion.cpp  motion_model.cpp  pf_manager.cpp  plug_filter_node.cpp  plug_likelihood.cpp  plug_service.cpp
peg_filter/src/peg_sensor/: plug_sensor.cpp
peg_handle/: CMakeLists.txt  package.xml
peg_handle/launch/: peg_handle.launch  peg_handle.launch~  peg_handle.rviz
peg_handle/src/: run.cpp
peg_handle/urdf/: peg_handle_two.urdf  peg_handle_two.xacro
peg_hole_kuka/: CMakeLists.txt  package.xml
peg_hole_kuka/config/: lwr_kuka_config.yaml
peg_hole_kuka/include/action_server/: action_server.h
peg_hole_kuka/include/motion_actions/: base_action.h  default_topics.h  motion_actions.h  pour_action.h
peg_hole_kuka/include/peg_hole_kuka/: action_client.h  client.h  cmd_interface.h  console.h
peg_hole_kuka/include/search_planner/: search_planner.h  search_planner_node.h
peg_hole_kuka/launch/: client.launch  cmd_overlord.launch  filter.launch  kuka_client.launch  kuka_server.launch  listener.lauch  listener.launch  listener.launch~  peg_hole_kuka.launch  peg_hole_kuka.launch~  peg_hole_kuka_real.launch  peg_hole_kuka_sim.launch  peg_kuka_cmd.launch  pour_action_node.launch  real.launch  record.launch  record_experiment.launch  record_force.launch  record_policy.launch  rviz_real.launch  rviz_sim.launch  server.launch  sim.launch  sim.launch~  speech.launch
peg_hole_kuka/launch/perspective/: external_force_torque.perspective
peg_hole_kuka/launch/rviz/: peg_hole_kuka.rviz
peg_hole_kuka/speech/config/: kuka_search.yaml  kuka_search.yaml~
peg_hole_kuka/speech/language_models/: kuka_search.corpus  kuka_search.dic  kuka_search.lm
peg_hole_kuka/src/: action_client.cpp  action_client_node.cpp  action_server_node.cpp  client.cpp  client_action_node.cpp  client_node.cpp  cmd_interface.cpp  cmd_interface_node.cpp  console.cpp  pour_action_node.cpp  run_search_node.cpp  search_planner.cpp  search_planner_node.cpp  server_node.cpp
peg_hole_kuka/src/action_server/: action_server.cpp
peg_hole_kuka/src/motion_actions/: base_action.cpp  motion_actions.cpp  pour_action.cpp
peg_hole_policy/: CMakeLists.txt  package.xml
peg_hole_policy/cfg/: cdd_filter.cfg  gains.cfg
peg_hole_policy/include/peg_hole_policy/: peg_hole_policy.h  state_machine.h  velocity_controller.h
peg_hole_policy/src/: peg_hole_policy.cpp  state_machine.cpp  velocity_controller.cpp
peg_hole_policy/src/policies/: base_find.cpp  demo_policies.cpp  find_socket.cpp  find_table.cpp  force_control.cpp  get_back_on.cpp  gmm_search.cpp  go_feature.cpp  greedy_policy.cpp  insert_peg.cpp  search_policy.cpp  simple_policies.cpp  specialised_policy.cpp  state_machine.cpp
peg_hole_policy/src/stack_planner/: planning_stack.cpp  state_machine.cpp
peg_in_hole/: CMakeLists.txt  CMakeLists.txt.user.02c236e.18  package.xml
peg_in_hole/include/peg_in_hole/: index_subscriber.h  peg_replay.h  run_trajectories.h
peg_in_hole/include/plug_filter/: motion_model.h  plug_likelihood.h  plug_service.h
peg_in_hole/include/plug_world_wrapper/: plug_world_wrapper.h
peg_in_hole/launch/: filter.launch  peg_in_hole.launch  peg_in_hole_all.launch  peg_in_hole_all.launch~  peg_in_hole_calibrate.launch  peg_in_hole_filter_socket.launch  peg_in_hole_pf.launch  peg_in_hole_pf.launch~  peg_in_hole_replay.launch  peg_in_hole_replay.launch~  peg_in_hole_sensor.launch  peg_in_hole_sensor.launch~  rqt_viz.sh~  table_sw.rviz
peg_in_hole/launch/particle_filter/: plug_particle_filter.lauch  plug_particle_filter.lauch~  plug_particle_filter.launch  plug_particle_filter.launch~
peg_in_hole/launch/perspective/: peg_in_hole_pf.perspective
peg_in_hole/launch/plug/: plug_handle.launch~
peg_in_hole/launch/rviz/: peg_in_hole.rviz  peg_in_hole_filter_one.rviz  peg_in_hole_filter_table_sw_one.rviz  peg_in_hole_one.rviz  peg_in_hole_pf.rviz  peg_in_hole_sensor_one.rviz  peg_in_hole_sensor_table_sw_one.rviz  peg_in_hole_table_sw_one.rviz  peg_in_hole_three.rviz  peg_in_hole_two.rviz
peg_in_hole/launch/table/: table_sw_one.launch  table_sw_one.launch~  table_sw_three.launch  table_sw_two.launch~
peg_in_hole/src/: vis_features_node.cpp
peg_in_hole/src/peg_replay/: index_subscriber.cpp  peg_replay.cpp  peg_replay_filter_node.cpp  peg_replay_node.cpp  run_trajectories.cpp  run_trajectories_node.cpp  vis_features.cpp
peg_in_hole/src/plug_filter/: motion_model.cpp  pf_manager.cpp  plug_filter_node.cpp  plug_likelihood.cpp  plug_service.cpp
peg_in_hole/src/plug_sensor/: plug_sensor.cpp
peg_in_hole/srv/: String_cmd.srv~
peg_in_hole/urdf/: plug_handle.xacro  plug_handle_two.urdf  plug_handle_two.xacro  plug_handle_two.xacro~
peg_in_hole/urdf/One/: socket_wall_one.xacro  table_sw_one.urdf  table_sw_one.xacro  table_sw_one.xacro~
peg_in_hole/urdf/Three/: socket_wall_three.xacro  table_sw_three.urdf  table_sw_three.xacro
peg_in_hole/urdf/Two/: socket_wall_two.xacro  socket_wall_two.xacro~  table_sw_two.urdf  table_sw_two.xacro  table_sw_two.xacro~
peg_in_hole/urdf/tmp/: wall.xacro
socket_table_broadcaster/: CMakeLists.txt  package.xml
socket_table_broadcaster/include/socket_table_broadcaster/: load.h  save.h  services.h
socket_table_broadcaster/save/link_socket/: orientation.csv  origin.csv
socket_table_broadcaster/src/: load.cpp  run.cpp  save.cpp  services.cpp
socket_table_broadcaster/srv/: String_cmd.srv
(+24 files in other folders)
