<?xml version="1.0"?>
<package>
  <name>peg_hole_policy</name>
  <version>0.0.0</version>
  <description>The peg_hole_policy package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="guillaume@todo.todo">guillaume</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/peg_hole_policy</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>        robot_base_planner          </build_depend>
  <run_depend>          robot_base_planner          </run_depend>

  <build_depend>        exploration_planner         </build_depend>
  <run_depend>          exploration_planner         </run_depend>

  <build_depend>        roscpp                      </build_depend>
  <run_depend>          roscpp                      </run_depend>

  <build_depend>        peg_sensor                  </build_depend>
  <run_depend>          peg_sensor                  </run_depend>

  <build_depend>        message_generation          </build_depend>
  <run_depend>          message_generation          </run_depend>

  <build_depend>        robot_motion_generation     </build_depend>
  <run_depend>          robot_motion_generation     </run_depend>

  <build_depend>	netft_rdt_driver            </build_depend>
  <run_depend>		netft_rdt_driver            </run_depend>

  <build_depend>	optitrack_rviz              </build_depend>
  <run_depend>		optitrack_rviz              </run_depend>

  <build_depend>	particle_filter             </build_depend>
  <run_depend>		particle_filter             </run_depend>

  <build_depend>	dynamic_reconfigure         </build_depend>
  <run_depend>		dynamic_reconfigure         </run_depend>

  <build_depend>	lwr_ros_interface           </build_depend>
  <run_depend>		lwr_ros_interface           </run_depend>

  <build_depend>	lwr_ros_client              </build_depend>
  <run_depend>		lwr_ros_client              </run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
